...
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis,TypographyDashes">
  <string name="about">About</string>
  <string name="add">Add</string>
  <string name="add_folder">Add folder</string>
  <string name="add_item">Add Item</string>
  <string name="an_error_has_occurred">An error has occurred.</string>
  <string name="back">Back</string>
  <string name="bitwarden">Bitwarden</string>
  <string name="cancel">Cancel</string>
  <string name="copy">Copy</string>
  <string name="copy_password">Copy password</string>
  <string name="copy_username">Copy username</string>
  <string name="credits">Credits</string>
...
  <string name="bitwarden_autofill_service">Bitwarden Autofill Service</string>
  <string name="bitwarden_autofill_accessibility_service_description">Use the Bitwarden accessibility service to autofill your logins.</string>
  <string name="change_email">Change email</string>
  <string name="change_email_confirmation">You can change your email address on the bitwarden.com web vault. Do you want to visit the website now?</string>
  <string name="change_master_password">Change master password</string>
  <string name="close">Close</string>
  <string name="continue_text">Continue</string>
  <string name="create_account">Create account</string>
  <string name="create_an_account">Create an account</string>
  <string name="creating_account">Creating account...</string>
  <string name="edit_item">Edit item</string>
  <string name="edit_login">Edit login</string>
  <string name="edit_card">Edit card</string>
...
  <string name="view_item">View item</string>
  <string name="view_login">View login</string>
  <string name="view_card">View card</string>
  <string name="view_identity">View identity</string>
  <string name="view_note">View note</string>
  <string name="view_passkey">View passkey</string>
  <string name="web_vault">Bitwarden web vault</string>
  <string name="lost_2fa_app">Lost authenticator app?</string>
  <string name="items">Items</string>
  <string name="extension_activated">Extension activated!</string>
  <string name="icons">Icons</string>
  <string name="translations">Translations</string>
  <string name="items_for_uri">Items for %1$s</string>
...
  <string name="autofill_or_view">Do you want to autofill or view this item?</string>
  <string name="bitwarden_autofill_service_match_confirm">Are you sure you want to autofill this item? It is not a complete match for \"%1$s\".</string>
  <string name="matching_items">Matching items</string>
  <string name="possible_matching_items">Possible matching items</string>
  <string name="search">Search</string>
  <string name="bitwarden_autofill_service_search">You are searching for an autofill item for \"%1$s\".</string>
  <string name="learn_org">Learn about organizations</string>
  <string name="cannot_open_app">Cannot open the app \"%1$s\".</string>
  <string name="authenticator_app_title">Authenticator app</string>
  <string name="enter_verification_code_app">Enter the 6 digit verification code from your authenticator app.</string>
  <string name="enter_verification_code_email">Enter the 6 digit verification code that was emailed to %1$s.</string>
  <string name="enter_verification_code_new_device">We don\'t recognize this device. Enter the 8 digit verification code that was emailed to %1$s.</string>
  <string name="login_unavailable">Login unavailable</string>
...
  <string name="master_password_policy_validation_title">Invalid password</string>
  <string name="master_password_policy_validation_message">Password does not meet organization requirements. Please check the policy information and try again.</string>
  <string name="loading">Loading</string>
  <string name="accept_policies">By activating this switch you agree to the following:</string>
  <string name="accept_policies_error">Terms of Service and Privacy Policy have not been acknowledged.</string>
  <string name="terms_of_service">Terms of Service</string>
  <string name="privacy_policy">Privacy Policy</string>
  <string name="accessibility_draw_over_permission_alert">Bitwarden needs attention - Turn on \"Draw-Over\" in \"Autofill Services\" from Bitwarden Settings</string>
  <string name="passkey_management">Passkey management</string>
  <string name="autofill_services">Autofill services</string>
  <string name="inline_autofill">Use inline autofill</string>
  <string name="inline_autofill_description">Use inline autofill if your selected IME (keyboard) supports it. If your configuration is not supported (or this option is turned off), the default Autofill overlay will be used.</string>
  <string name="accessibility">Use accessibility</string>
...
  <string name="sending_code">Sending code</string>
  <string name="verifying">Verifying</string>
  <string name="resend_code">Resend code</string>
  <string name="a_verification_code_was_sent_to_your_email">A verification code was sent to your email</string>
  <string name="an_error_occurred_while_sending_a_verification_code_to_your_email_please_try_again">An error occurred while sending a verification code to your email. Please try again</string>
  <string name="enter_the_verification_code_that_was_sent_to_your_email">Enter the verification code that was sent to your email</string>
  <string name="submit_crash_logs">Submit crash logs</string>
  <string name="submit_crash_logs_description">Help Bitwarden improve app stability by submitting crash reports.</string>
  <string name="options_expanded">Options are expanded, tap to collapse.</string>
  <string name="options_collapsed">Options are collapsed, tap to expand.</string>
  <string name="uppercase_ato_z">Uppercase (A to Z)</string>
  <string name="lowercase_ato_z">Lowercase (A to Z)</string>
  <string name="numbers_zero_to_nine">Numbers (0 to 9)</string>
...
  <string name="log_in_with_device">Log in with device</string>
  <string name="logging_in_on">Logging in on</string>
  <string name="logging_in_on_with_colon">Logging in on:</string>
  <string name="vault">Vault</string>
  <string name="appearance">Appearance</string>
  <string name="account_security">Account security</string>
  <string name="bitwarden_help_center">Bitwarden help center</string>
  <string name="contact_bitwarden_support">Contact Bitwarden support</string>
  <string name="copy_app_information">Copy app information</string>
  <string name="sync_now">Sync now</string>
  <string name="unlock_options">Unlock options</string>
  <string name="session_timeout">Session timeout</string>
  <string name="session_timeout_action">Session timeout action</string>
...
